--- a/menuzaso/menuzaso/static/css/menuzaso.css
+++ b/menuzaso/menuzaso/static/css/menuzaso.css
@@ -1,25 +1,98 @@
 .category-title-block{
-    width: 1000px; 
+    max-width: 1000px; 
+    width: 100%;
     height: 150px;
-    
 }
 .category-title-block h2{
     font-size: 50px;
 }
 .category-title-block img{
     filter: brightness(60%);
+    width: 100%;
+    height: 100%;
 }
 
 
+body{
+    background-color: #edf2f7;
+}
 
+.ingredients-list div{
+    width: 200px;
+}
+.category-dish-container{
+    width: 100%;
+    max-width: 1050px;
+
+}
+
+.category-dish:nth-last-of-type(-n+1):not(:nth-child(even))  {
+    margin-right: auto;          /*  added  */
+  }
 
 .category-dish{
+    border-radius: 10px;
+    margin-right: 20px;
     background-color: white;
     width: 450px;
+
     height: 170px;
+    /*box-shadow:
+    0 0px 5.1px rgba(0, 0, 0, 0.048),
+    0 1.1px 12.9px rgba(0, 0, 0, 0.065),
+    0 4.2px 26.4px rgba(0, 0, 0, 0.081),
+    0 12px 54.4px rgba(0, 0, 0, 0.101),
+    0 38px 149px rgba(0, 0, 0, 0.13)
+    ;*/
+
+}
+.category-dish .title{
+    font-size: 17px;
 }
 
+.category-dish .description{
+    color: #707070;
+    font-size: 14px;
+}
+.category-dish .price{
+    color: #194D00;
+    right: 20px;
+    bottom: 10px;
+}
 .category-dish img{
     width: 128px;
     height: 128px;
+}
+
+
+@media screen and (max-width: 500px){
+    .category-title-block h2{
+        font-size: 30px;
+    }
+    .category-dish{
+        flex-direction: column;
+        height: auto;
+        margin: 0;
+        max-width: 80%;
+    }
+    .category-dish-container{
+        padding: 0 10px !important
+    }
+    .category-dish > div{
+
+        width: 100%;
+    }
+
+    .category-dish img{
+        object-fit: cover;
+        width: 90%;
+        height: 140px;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    .category-dish{
+
+        max-width: 90%;
+    }
 }
