--- a/menuzaso/templates/restaurant/restaurant_page.html
+++ b/menuzaso/templates/restaurant/restaurant_page.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-    <div class="w-full flex flex-col items-center">
+    <div class="w-full flex flex-col items-center pb-20">
         {% for block in page.content %}
             {% include_block block %}
         {% endfor %}
