--- a/menuzaso/menuzaso/static/css/menuzaso.css
+++ b/menuzaso/menuzaso/static/css/menuzaso.css
@@ -1,3 +1,36 @@
+
+
+
+*{
+    font-family: Inter !important;
+}
+/* LOGO BLOCK */
+
+.logo-block img{
+    width: 80%;
+    max-width: 400px;
+}
+
+
+
+/* ARROW */
+.mobile-425{
+    display: none;
+}
+.arrow{
+    
+    width: 15px;
+    right: 5px;
+    top: 10px;
+    transition: 0.5s;
+    transform: rotate(-90deg);
+}
+
+.arrow-rotate{
+    transition: 0.5s;
+    transform: rotate(0deg);
+}
+
 .category-title-block{
     max-width: 1000px; 
     width: 100%;
@@ -17,23 +50,22 @@ body{
     background-color: #edf2f7;
 }
 
-.category-dish-container{
+.dish-container{
     width: 100%;
     max-width: 1050px;
 
 }
 
-.category-dish:nth-last-of-type(-n+1):not(:nth-child(even))  {
+.dish:nth-last-of-type(-n+1):not(:nth-child(even))  {
     margin-right: auto;          /*  added  */
   }
 
-.category-dish{
+.dish{
     border-radius: 10px;
-    margin-right: 20px;
     background-color: white;
     width: 450px;
 
-    height: 170px;
+    min-height: 170px;
     /*box-shadow:
     0 0px 5.1px rgba(0, 0, 0, 0.048),
     0 1.1px 12.9px rgba(0, 0, 0, 0.065),
@@ -43,20 +75,53 @@ body{
     ;*/
 
 }
-.category-dish .title{
+
+
+
+
+
+
+
+.title-prom{
+    background-color: #272727;
+    width: 100% ;
+    max-width: 100% ;
+    min-height: 150px ;
+    max-height: auto;
+    padding: 30px 0 ;
+}
+
+
+.title-prom h2{
+    color: white;
+    font-size: 35px;
+}
+
+
+.dish .title{
     font-size: 17px;
 }
 
-.category-dish .description{
+.ingredients-hidden{
+    display: none;
+}
+.dish .more{
+    bottom: 10px;
+    left: 20px;
+}
+
+
+.description{
     color: #707070;
     font-size: 14px;
 }
-.category-dish .price{
+.price{
     color: #194D00;
     right: 20px;
     bottom: 10px;
 }
-.category-dish img{
+.dish .image{
+    align-self: flex-start;
     width: 128px;
     height: 128px;
 }
@@ -66,56 +131,81 @@ body{
     .category-title-block h2{
         font-size: 30px;
     }
-    .category-dish{
+    .dish{
         height: auto;
         margin: 0;
         max-width: 95%;
         margin-top: 20px !important;
     }
-    .category-dish-container{
+    .dish-container{
         padding: 0 10px !important
     }
-    .category-dish > div{
-
+    .dish > div{
         width: 100%;
     }
 
-    .category-dish img{
+    .dish .image{
         object-fit: cover;
         width: 100px;
         height: 100px;
     }
+    .title-prom h2{
+        font-size: 25px !important;
+        max-width: 100% !important;
+    }
+}
+@media screen and (max-width: 425px) {
+    .mobile-425{
+        display: block;
+    }
+    .dish{
+        min-height: 130px;
+    }
+    .dish .ingredients{
+        display: none;
+        
+    }
+    .title-prom{
+        height: auto;
+        min-height: 150px !important;
+        padding: 10px 10px !important;
+    }
+    
 }
 
+
 @media screen and (max-width: 375px) {
-    .category-dish{
+    .dish{
         align-items: flex-start !important;
         width: 95%;
         padding: 10px 10px !important;
         line-height: 1.3;
     }
-    .category-dish .ingredients {
+    .dish .ingredients {
         font-size: 14px;
     }
-    .category-dish > div{
+    .dish > div{
         padding-top: 0 !important;
     }
-    .category-dish img{
+    .dish .image{
         object-fit: cover;
         width: 80px;
         height: 80px;
     }
-    .category-dish .title{
+    .dish .title{
         font-size: 15px;
     }
     
-    .category-dish .description{
+    .dish .description{
         font-size: 13px;
     }
-    .category-dish .price{
+    .dish .price{
         color: #194D00;
         right: 10px;
         bottom: 5px;
+    }
+    .title-prom h2{
+        font-size: 20px !important;
     }
 
 }
